--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ main {
 }
 
 footer{
-    background-color: white;
+    background-color: whitesmoke;
     height: 10vh;
     padding: 20px;
 }
@@ -56,5 +56,3 @@ footer img{
     padding-left: 20px;
     align-content: center;
 }
-
-algo mais
